metacatui/src/main/webapp/css/metacatui.css
/* ... */
    
    /* make sure the anchors render with padding-top */
    h1 > a[name]:before, h2 > a[name]:before, h3 > a[name]:before,
    h4 > a[name]:before, h5 > a[name]:before, h6 > a[name]:before {
		content: "";
    padding-top: 115px;
    }
    
    a {
      color: #115E95; /*blue from the earthtones pallette */
    }
    
    div.row-fluid > a[name] {
      margin: 35px auto auto auto;
    }
    
/* FORM/INPUT CUSTOMIZATIONS
-------------------------------------------------- */ 
	.controls-well {
	    border: 1px solid #E3E3E3;
	    border-radius: 4px 4px 4px 4px;
	    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
	    padding: 4px;
	}
	.control-label {
		cursor: default;
	}

/* EML CUSTOMIZATIONS
-------------------------------------------------- */
	#Eml h4, .well, .control-label {
		color: #555555;
	}


/* HEADER CSS
-------------------------------------------------- */    
  header#Header {
    position: fixed;
    top: 0px;
    z-index: 100;
    height: 95px;
    background-color: #FDFDFD;
    overflow: hidden;
    opacity: 1.0;    
  }
  
  header#mainHeader {
    position: relative;
    top: 0px;
    z-index: 100;
    min-height: 400px;      
  }

/* NOTIFICATION AREA CSS
 * -------------------------------------------------- */    
  section#Notification {
    position: fixed;
    top: 95px;
    height: 40px;
    width: 100%;
    max-height: 40px;
    min-height: 40px;
    background-color: #FDFDFD;
  }

  
/* FOOTER CSS
-------------------------------------------------- */    

    footer#Footer {
      position: relative;
      bottom: 0px;
      padding-top: 30px;
      padding-bottom: 30px;
      margin-top: 0px;
      color: #FDFDFD;
      background-color: #3F3F3F;
    }
        
    footer#Footer div#FooterHeading {
      max-width: 650px;
    }

    footer#Footer h2 {
      font: 300 25px/25px "Lato";
      vertical-align: middle;
      padding: 0;
      line-height: 48px;
    }
        
    footer#Footer h3 {
      font: 800 30px/30px "Open Sans";
      text-align: center;
      padding: 0px 0px 20px 0px;
      margin-bottom: -25px;
      border-bottom: 1px solid #FDFDFD;
      
    }

    footer#Footer h3 > span {
      font: 400 30px/30px "Gentium Book Basic";
      font-style: italic;
    }
    
    footer#Footer h4.subheading {
      vertical-align: baseline;
      padding: 0;
      text-align: center;
      margin-bottom: 40px;
    }
    
    footer#Footer h4.subheading > span {
      font: 400 30px/30px "Gentium Book Basic";
      font-style: italic;
      text-transform: uppercase;
      background-color: #3F3F3F;
      padding: 0px 15px 0px 15px;
    }
    
    footer#Footer ul.helpitems {
      list-style: none;
      list-style-position: inside;
      margin: 0px 0px 40px 0px;
    }
    
    footer#Footer ul.helpitems li {
      font: 100 20px/20px "Lato";
      vertical-align: baseline;
      margin: 15px 0px 0px 0px;                 
    }
    
    ul.helpitems a {
      color: #FDFDFD;
      text-decoration: none;      
    }
    
    footer#Footer a:hover {
      color: #FFFFFF;
      font-weight: 300;
      text-decoration: none;      
    }
    
    footer#Footer .disclaimer {
      color: #FDFDFD;
      font: 100 14px/14px "Lato";      
    }
    
    footer#Footer .logo {
      color: #D9D9D9;
      font: 300 48px "Lato";
      line-height: 1.0;
      letter-spacing: -3px;
      margin: 0px 0px 15px 0px;
      text-align: center;
    }
    
    footer#Footer .acknowledgements {
      margin-top: 40px;
    }

    footer#Footer img {
      opacity: .75;
    }

    #footer_signup {
      position: relative;
      left: 50%;
      /*bottom: 0px;*/
      width: 188px;
      margin: 20px auto 20px -94px;
    }
    
    .btn, .btn-primary, .btn-large, .btn-small, .btn-mini {
      font-weight: 400;
      background-image: none;
      background-repeat: none;
    }

    .btn-primary a, .btn-info a, .btn-success a, .btn-warning a, .btn-danger a, .btn-inverse a {
      color: #FFFFFF; 
      text-decoration:none;     
    }
    
    .btn-primary {
      background-color: #992222;
      color: #FFFFFF;
      
    }
    button.btn-primary a {
      color: #FFFFFF;
      text-decoration: none;
    }
        
    .btn-primary:hover {
      background-color: #882222;
      color: #FDFDFD;
      background-image: none;
      background-repeat: none;
      
    }
    
    #search_btn.btn {
      background-color: #992222;
      color: #FFFFFF;
      
    }
    
    #search_btn.btn:hover {
      background-color: #882222;
      color: #FFFFFF;
      
    }
    
    i.glyphicons-icon, i.halflings-icon {
      opacity: .8;
    }

    i.glyphicons-icon.white {
      opacity: 1;
    }
    
/* FEATURES CSS
-------------------------------------------------- */    
    
    #Features {
      position: relative;
      background-color: #899CA6;
      padding-top: 20px;
      color: #FDFDFD;
			min-height: 400px;
    }

    section#Features h4 {
      font-size: 160%;
      font-weight: 300;
    }

    section#Features p {
      font-size: 110%;
      font-weight: 300;
      line-height: 1.75;
      margin-bottom: 30px;
    }
    
    section#Features button {
      background-color: #6C94A4;
      color: #FFFFFF;
      border: none;
      text-shadow: none;
      box-shadow: none;
    }

    section#Features button:hover {
      background-color: #5C7F8C;
    
    } 
    
/* FEATURED DATA CSS
-------------------------------------------------- */    

    #FeaturedData {
      position: relative;
      background-color: #878787;
      color: #FDFDFD;
      /*min-height: 1200px;*/
    }

    #FeaturedData > section {
      border-top: 1px solid #878787;
    }
		
	  #FeaturedData h2 {
	  	font-weight: 300;
      color: #FDFDFD;
      text-decoration: none;
      width: 450px;
	  }
        
    #FeaturedData h2 a {
      color: #FDFDFD;
      text-decoration: none;      
    }
/* ... */

